Adding font awesome

--- a/client/templates/index.html
+++ b/client/templates/index.html
@@ -2,21 +2,22 @@
   
   <section class='slides layout-regular template-default'>
     <article>
-      <h1> Desenvolvimento ágil de páginas web com Meteor </h1>
+      <h1> Meteor </h1>
+      <img style="float: right; height: 35%; " src="images/meteor-animated.gif" />
       <br>
       <p>
         Gabriel Pugliese
-        <br/>
-        twitter: @gabrielsapo
-        <br/>
-        github: gabrielhpugliese
-        <br/>
       </p>
+      <ul>
+          <li><i class="fa fa-twitter-square"></i> <a href="https://twitter.com/gabrielsapo" target="_blank"> @gabrielsapo</a></li>
+          <li><i class="fa fa-google-plus-square"></i> <a href="https://plus.google.com/+GabrielPugliese" target="_blank">+gabrielpugliese</a></li>
+          <li><i class="fa fa-github-square"></i> <a href="https://github.com/gabrielhpugliese" target="_blank">gabrielhpugliese</a></li>
+      </ul>
     </article>
     
     <article>
       <h3> 7 princípios do Meteor </h3>
-      <img style="float: right; height: 35%; "  src="images/meteor.png" />
+      <img style="float: right; height: 35%; " src="images/meteor.png" />
       <ul>
         <li>
           <span class="bolder">Data on the Wire:</span> Não enviar HTML pela rede. Enviar dados.
