--- a/client/templates/index.html
+++ b/client/templates/index.html
@@ -48,6 +48,7 @@
       <ul>
         <li><b>Meteor.com:</b> Próprio site do Meteor</li>
         <li><b>CodersTV:</b> Plataforma de conteúdo em vídeo para desenvolvedores.</li>
+        <li><b>Sedimently:</b> Ferramenta de gestão de conhecimento para startups.</li>
         <li><b>Futuro site da Engarte:</b> Plataforma social para engenheiros e arquitetos.</li>
         <li><b>Discover Meteor:</b> Site-livro feito pelo co-criador do Meteor.</li>
         <li><b>Made With:</b> Sites e apps feitos pela comunidade de Meteor.</li>
