--- a/client/templates/index.html
+++ b/client/templates/index.html
@@ -41,9 +41,15 @@
         </li>
       </ul>
     </article>
+
+    <article>
+      <h1>
+        Sites de exemplo
+      </h1>
+    </article>
     
     <article>
-      <h3>Exemplos - Meteor.com</h3>
+      <h3>Meteor.com</h3>
       {{#constant}}
         <iframe src="http://meteor.com/" seamless="seamless" frameborder="0"></iframe>
       {{/constant}}
@@ -86,10 +92,11 @@
       </h1>
     </article>
     
-    <article>
-      <h1>
+    <article class="fill">
+      <h3>
         Template
-      </h1>
+      </h3>
+      <p><img src="/images/doctype.jpg" style="height: 185%;" alt=""></p>
     </article>
 
     <article>
@@ -186,10 +193,11 @@ Handlebars.registerHelper('markdown', function (options) {
       </section>
     </article>
     
-    <article>
-      <h1>
+    <article class="fill">
+      <h3>
         Segurança e Validação
-      </h1>
+      </h3>
+      <p><img src="/images/computer-hacker.jpg" style="height: 100%;" alt=""></p>
     </article>
 
     <article>
@@ -255,10 +263,11 @@ check(undefined, Match.Optional(String)); // OK
       </ul>
     </article>
 
-    <article>
-      <h1>
+    <article class="fill">
+      <h3>
         Pacotes úteis
-      </h1>
+      </h3>
+      <p><img src="/images/box.jpg" style="height: 100%;" alt=""></p>
     </article>
 
     <article>
