Added headers in examples

--- a/client/templates/index.html
+++ b/client/templates/index.html
@@ -11,6 +11,7 @@
           <li><i class="fa fa-twitter-square"></i> <a href="https://twitter.com/gabrielsapo" target="_blank"> @gabrielsapo</a></li>
           <li><i class="fa fa-google-plus-square"></i> <a href="https://plus.google.com/+GabrielPugliese" target="_blank">+gabrielpugliese</a></li>
           <li><i class="fa fa-github-square"></i> <a href="https://github.com/gabrielhpugliese" target="_blank">gabrielhpugliese</a></li>
+          <li>Essa apresentação <a href="http://dicas.meteor.com"></a></li>
       </ul>
     </article>
     
@@ -56,31 +57,31 @@
     </article>
 
     <article>
-        <h3>CodersTV</h3>
+        <h3>CodersTV.com</h3>
         {{#constant}}
           <iframe src="http://coderstv.com/"  seamless="seamless" frameborder="0"></iframe>
         {{/constant}}
     </article>
     <article>
-        <h3></h3>
+        <h3>Engarte</h3>
         {{#constant}}
           <iframe src="http://engarte-campus.meteor.com/"  seamless="seamless" frameborder="0"></iframe>
         {{/constant}}
     </article>
     <article>
-        <h3></h3>
+        <h3>Sedimently.com</h3>
         {{#constant}}
           <iframe src="http://sedimently.com/"  seamless="seamless" frameborder="0"></iframe>
         {{/constant}}
     </article>
     <article>
-        <h3></h3>
+        <h3>Discovermeteor.com</h3>
         {{#constant}}
           <iframe src="https://www.discovermeteor.com/"  seamless="seamless" frameborder="0"></iframe>
         {{/constant}}
     </article>
     <article>
-        <h3></h3>
+        <h3>Madewith.meteor.com</h3>
         {{#constant}}
           <iframe src="http://madewith.meteor.com/" seamless="seamless" frameborder="0"></iframe>
         {{/constant}}
