--- a/client/templates/index.html
+++ b/client/templates/index.html
@@ -11,7 +11,7 @@
           <li><i class="fa fa-twitter-square"></i> <a href="https://twitter.com/gabrielsapo" target="_blank"> @gabrielsapo</a></li>
           <li><i class="fa fa-google-plus-square"></i> <a href="https://plus.google.com/+GabrielPugliese" target="_blank">+gabrielpugliese</a></li>
           <li><i class="fa fa-github-square"></i> <a href="https://github.com/gabrielhpugliese" target="_blank">gabrielhpugliese</a></li>
-          <li>Essa apresentação <a href="http://dicas.meteor.com"></a></li>
+          <li>Esta apresentação: <a href="http://dicas.meteor.com">dicas.meteor.com</a></li>
       </ul>
     </article>
     
