Added async utilities

--- a/client/stylesheets/index.less
+++ b/client/stylesheets/index.less
@@ -1,7 +1,7 @@
-.bolder {
-    font-size: 30px;
+.bullets {
     font-weight: 700;
     color: #000;
+    font-style: italic;
 }
 
 #meteor-animated {
